After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687621 - Fix build failure for lack of return value
Fix build failure for lack of return value
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-05 10:06 UTC by Stef Walter
Modified: 2012-11-05 10:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build failure for lack of return value (891 bytes, patch)
2012-11-05 10:07 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-11-05 10:06:58 UTC
Build failed because of invalid use of g_return_if_val(). See patch.
Comment 1 Stef Walter 2012-11-05 10:07:00 UTC
Created attachment 228085 [details] [review]
Fix build failure for lack of return value
Comment 2 Jens Georg 2012-11-05 10:26:32 UTC
Attachment 228085 [details] pushed as 5550411 - Fix build failure for lack of return value