Fix build failure for lack of return value

https://bugzilla.gnome.org/show_bug.cgi?id=687621